force-app/main/default/objects/WD_Product_Portfolio__c/WD_Product_Portfolio__c.object-meta.xml
<CustomObject>
    <label>WD Product Portfolio</label>
    <nameField>
        <displayFormat>WPROD-{00000}</displayFormat>
        <label>WD Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WD Product Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>