force-app/main/default/objects/WD_Product_Portfolio__c/fields/WD_Default_Support_Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>WD_Default_Support_Tier_Level__c</fullName>
    <description>Indicates the default level of technical support complexity typically associated with this product. Influences initial case routing and resource allocation strategies.</description>
    <inlineHelpText>Select the typical support tier this product&apos;s issues would be handled by as a default.&quot;
(Ensure Visible for relevant profiles &amp; Add to Page Layout)</inlineHelpText>
    <label>WD Default Support Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1 (GCC Only)</fullName>
            </value>
            <value>
                <fullName>Tier 2 (GTAC Eligible)</fullName>
            </value>
            <value>
                <fullName>Tier 3 (Specialized GTAC Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>