force-app/main/default/objects/WD_Product_Portfolio__c/fields/WD_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>WD_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this product is currently active, marketed, and supported by Winchester Dynamics.</description>
    <inlineHelpText>Check if this product is currently offered and supported. Uncheck for discontinued or end-of-life products.</inlineHelpText>
    <label>WD Is Active</label>
    <type>Checkbox</type>
</CustomField>