force-app/main/default/objects/WD_Product_Portfolio__c/fields/WD_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>WD_Product_Description__c</fullName>
    <description>A detailed description of the product, its key features, capabilities, and target use cases.</description>
    <inlineHelpText>Provide a summary or detailed overview of this product, its functionality, and benefits.</inlineHelpText>
    <label>WD Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>