force-app/main/default/objects/WD_Product_Portfolio__c/fields/WD_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>WD_Product_Line__c</fullName>
    <description>The primary Winchester Dynamics product line category this product belongs to. Ensures consistency with Case categorization.</description>
    <inlineHelpText>Select the main product division this product is part of.</inlineHelpText>
    <label>WD Product Line</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Technologies</fullName>
            </value>
            <value>
                <fullName>Safety &amp; Productivity Solutions (SPS)</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Process Solutions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>