force-app/main/default/objects/WD_Product_Portfolio__c/fields/WD_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>WD_Product_Name__c</fullName>
    <description>The official marketable name of the Winchester Dynamics product or solution.</description>
    <inlineHelpText>Enter the full, user-facing name of the product</inlineHelpText>
    <label>WD Product Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>