force-app/main/default/objects/WD_Product_Portfolio__c/fields/WD_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>WD_Product_SKU__c</fullName>
    <description>The unique Stock Keeping Unit or internal identifier for the Winchester Dynamics product. Used as an External ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the unique SKU or model number for this product. This value must be unique across all products</inlineHelpText>
    <label>WD Product SKU</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>