force-app/main/default/objects/WD_Product_Portfolio__c/fields/WD_Product_Version__c.field-meta.xml
<CustomField>
    <fullName>WD_Product_Version__c</fullName>
    <description>The specific version number or revision of the product, if applicable (e.g., for software or firmware)</description>
    <inlineHelpText>Enter the product version, e.g., &apos;V2.1&apos;, &apos;Rev C&apos;, if applicable.</inlineHelpText>
    <label>WD Product Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>